--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-<meta http-equiv="refresh" content="0; url=https://curtgrim2.github.io/public/index.html">
+<!DOCTYPE>
+<html>
+  <meta http-equiv="refresh" content="0; url=https://curtgrim2.github.io/public/index.html">
+</html>
