--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE>
 <html>
-  <meta http-equiv="refresh" content="0; url=https://curtgrim2.github.io/public/index.html">
+  <meta http-equiv="refresh" content="0; url=https://curtgrim2.github.io/iPhoneChatRoom/public/index.html">
 </html>
